--- a/MODAMSWeb/Areas/Users/Views/Employees/Profile.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Employees/Profile.cshtml
@@ -27,8 +27,19 @@
                             <div class="ms-4">
                                 <h4 id="lblFullName">@Model.FullName</h4>
                                 <p class="text-muted mb-2" id="lblJobTitle">@Model.JobTitle</p>
-                                <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-pencil"></i> Edit Picture</a>
-                                <a asp-area="Users" asp-action="ResetPassword" asp-controller="Employees" class="btn btn-secondary btn-sm"><i class="fa fa-key"></i> Reset Password</a>
+
+                                <div class="main-dropdown-form-demo">
+                                    <a href="#" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#largemodal"><i class="fa fa-pencil"></i> Edit Picture</a>
+                                    <button class="btn btn-secondary btn-sm" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-key"></i> Reset Password <i class="icon ion-ios-arrow-down text-12"></i></button>
+                                    <div class="dropdown-menu" style="">
+                                        <div class="p-5">
+                                            <h4 class="dropdown-title">Reset Password</h4><br />
+                                            <p>Password reset instructions will be sent to your email address!<br />Are you sure you want to reset your password?</p><br />
+                                            <a asp-area="Users" asp-action="ResetPassword" asp-controller="Employees" class="btn btn-primary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> Reset Password</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -70,6 +81,9 @@
                                     <tr>
                                         <td><strong>Email :</strong> @Model.Email</td>
                                     </tr>
+                                    <tr>
+                                        <td><strong>ID Card Number :</strong> @Model.CardNumber</td>
+                                    </tr>
                                 </tbody>
                                 <tbody class="col-lg-12 col-xl-6 p-0 border-top-0">
                                     <tr>
@@ -80,6 +94,9 @@
                                     </tr>
                                     <tr>
                                         <td><strong>Supervisor :</strong> @Model.SupervisorName </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -121,6 +138,7 @@
                     <div class="card-body border-0">
                         <form class="form-horizontal" method="post" asp-action="SaveProfile">
                             <input asp-for="Id" hidden />
+                            <input asp-for="Email" hidden />
                             <div class="row mb-4">
                                 <p class="mb-4 text-17">Personal Info</p>
                                 <div class="col-md-12 col-lg-12 col-xl-6">
@@ -139,9 +157,9 @@
                                 </div>
                                 <div class="col-md-12 col-lg-12 col-xl-6">
                                     <div class="form-group">
-                                        <label asp-for="Email" class="form-label"></label>
-                                        <input asp-for="Email" readonly class="form-control">
-                                        <span asp-validation-for="Email" class="text-danger"></span>
+                                        <label asp-for="CardNumber" class="form-label"></label>
+                                        <input asp-for="CardNumber" class="form-control">
+                                        <span asp-validation-for="CardNumber" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12 col-xl-6">
@@ -151,7 +169,7 @@
                                         <span asp-validation-for="Phone" class="text-danger"></span>
                                     </div>
                                 </div>
-                                
+
                                 <div class="col-md-12 col-lg-12 col-xl-6">
                                     <div class="form-group">
                                         <button id="btnSaveChanges" type="submit" class="btn btn-primary">
@@ -168,6 +186,27 @@
     </div><!-- COL-END -->
 </div>
 <!-- ROW-1 CLOSED -->
+<!--Modals-->
+@*<div class="modal fade" id="largemodal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg " role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>*@
+</div>
+<!--End Modals-->
 @section Scripts{
     <script>
 
