--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -77,6 +77,15 @@
     <!-- SELECT2 JS -->
     <script src="~/assets/plugins/select2/select2.full.min.js"></script>
     
+    <!--DATA TABLES-->
+    <script src="~/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
+    <script src="~/assets/plugins/datatable/js/dataTables.bootstrap5.js"></script>
+    <script src="~/assets/plugins/datatable/dataTables.responsive.min.js"></script>
+
+
+    <!--PERFECT SCROLLBAR-->
+    <script src="~/assets/plugins/p-scroll/perfect-scrollbar.js"></script>
+
     <!-- FORMVALIDATION JS -->
     <script src="~/assets/js/form-validation.js"></script>
     
