--- a/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@model MODAMS.Models.ViewModels.Dto.DisposalsDTO
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model MODAMS.Models.ViewModels.Dto.DisposalsDTO
+
+
 
 <div class="page-header">
     <div>
-        <h1 class="page-title">Disposals</h1>
+        <h1 class="page-title">@Localizer["Disposals"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -18,7 +24,7 @@
                 <div class="card divShadow">
                     <div class="card-body p-4">
                         <div class="d-flex align-items-center justify-content-between">
-                            <h4 class="m-0">Asset Disposals</h4>
+                            <h4 class="m-0">@Localizer["AssetDisposals"]</h4>
                             <h4 class="float-end">@Model.StoreName</h4>
                         </div>
                     </div>
@@ -91,7 +97,7 @@
                     <div class="card-body divShadow">
                         <div class="row">
                             <div class="col-8">
-                                <h4>Others</h4>
+                                <h4>@Localizer["Others"]</h4>
                                 <p>@nTotalCount</p>
                             </div>
                             <div class="col-4">
@@ -113,19 +119,19 @@
                         <a asp-area="Users" asp-controller="Disposals" asp-action="CreateDisposal"
                            class="btn btn-info-gradient trShadow @sDisabled mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                            New Disposal
+                            @Localizer["NewDisposal"]
                         </a>
                         <div class="table-responsive export-table">
                             <table id="tblDisposals" class="table text-nowrap mb-0 table-bordered key-buttons border-top border-bottom project-list-main">
                                 <thead class="bg-info-gradient ms-auto divShadow">
                                     <tr>
-                                        <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-10">Date</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-10">Disposal Type</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-10">Category</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-20">Asset Name</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-10">Identification</th>
-                                        <th class="text-white bg-transparent border-bottom-0 w-10 no-btn">Action</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-5">@Localizer["SNo"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-10">@Localizer["Date"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-10">@Localizer["DisposalType"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-10">@Localizer["Category"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-20">@Localizer["AssetName"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-10">@Localizer["Identification"]</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-10 no-btn">@Localizer["Action"]</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -159,12 +165,12 @@
                                                         </button>
                                                         <div class="dropdown-menu" style="">
                                                             <div class="p-5">
-                                                                <h4 class="dropdown-title bolder text-danger">Delete Disposal?</h4>
+                                                                <h4 class="dropdown-title bolder text-danger">@Localizer["DeleteDisposal"]?</h4>
                                                                 <p class="text-muted">You will not be able to undo this action, are you sure?</p>
                                                                 <form asp-action="DeleteDisposal" id="frmDeleteDisposal" method="post">
                                                                     <input type="hidden" id="id" name="id" value="@disposal.Id" />
                                                                     <button type="submit" id="btnSubmitDeleteDisposal" class="btn btn-outline-danger btn-sm">
-                                                                        <i class="fa fa-check-square"></i> Delete
+                                                                        <i class="fa fa-check-square"></i> @Localizer["Delete"]
                                                                     </button>
                                                                 </form>
                                                             </div>
